create header and tweet form in content

--- a/src/global.css
+++ b/src/global.css
@@ -6,6 +6,9 @@
 
 :root {
   --twitter-blue: #1da1f2;
+  --border: #ebeef0;
+  --placeholder: #5B7083;
+  --separator: #f7f9fa;
 }
 
 body {
@@ -19,10 +22,19 @@ body, input, textarea, button {
 
 button {
   cursor: pointer;
+  border-radius: 9999px;
+  background: var(--twitter-blue);
+  color: #fff;
+  border: 0;
+}
+
+button:hover {
+  filter: brightness(0.95);
 }
 
 a {
   color: inherit;
+  text-decoration: none;
 }
 
 /** Page: Timeline **/
@@ -47,21 +59,12 @@ a {
 }
 
 .sidebar .new-tweet {
-  background: var(--twitter-blue);
-  border-radius: 9999px;
   padding: 1rem;
   display: flex;
   justify-content: center;
   width: 100%;
-  color: #fff;
   font-size: 1.25rem;
   font-weight: 900;
-  border: 0;
-
-}
-
-.sidebar .new-tweet:hover {
-  filter: brightness(0.95);
 }
 
 .main-navigation {
@@ -76,7 +79,6 @@ a {
   gap: 1.25rem;
   font-size: 1.25rem;
   font-weight: 700;
-  text-decoration: none;
 }
 
 .main-navigation a.active {
@@ -89,6 +91,71 @@ a {
 }
 
 .content {
-  border-left: 1px solid #ebeef0;
-  border-right: 1px solid #ebeef0;
+  border-left: 1px solid var(--border);
+  border-right: 1px solid var(--border);
+}
+
+.timeline-header {
+  padding: 1.5rem 1.25rem;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  font-size: 1.25rem;
+  font-weight: 700;
+  border-bottom: 1px solid var(--border);
+}
+
+.timeline-header svg {
+  width: 1.5rem;
+  height: 1.5rem;
+  color: var(--twitter-blue);
+}
+
+.new-tweet-form {
+  padding: 1.5rem 1.25rem;
+  display: flex;
+  flex-direction: column;
+  gap: 1.5rem;
+}
+
+.new-tweet-form label {
+  display: flex;
+  gap: 0.75rem;
+}
+
+.new-tweet-form label img {
+  width: 3rem;
+  height: 3rem;
+  border-radius: 9999px;
+}
+
+.new-tweet-form label textarea {
+  flex: 1;
+  border: 0;
+  font-size: 1.25rem;
+  font-weight: 500;
+  margin-top: 0.75rem;
+  resize: none;
+}
+
+.new-tweet-form label textarea:focus {
+  outline: none;
+}
+
+.new-tweet-form label textarea::placeholder {
+  color: var(--placeholder);
+}
+
+.new-tweet-form button[type=submit] {
+  margin-left: auto;
+  padding: 0.75rem 1.5rem;
+  font-size: 1rem;
+  font-weight: 900;
+}
+
+.separator {
+  background-color: var(--separator);
+  border-top: 1px solid var(--border);
+  border-bottom: 1px solid var(--border);
+  height: 0.75rem;
 }
